--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -7,26 +7,22 @@ build:
   dockerfile: Dockerfile
 
 run:
-  cmd: python train.py --log_dir=./log/ --data_dir=./onera/ --weight_dir=/outputs/ --batch_size=10 --epochs=1 --loss=focal # Use default params
+  cmd: python train.py \
+   --log_dir=./log/ \
+   --data_dir=./onera/ \
+   --weight_dir=/outputs/ \
+   --batch_size=100 \
+   --epochs=5 \
+   --loss=focal # Use default params
 
 framework: pytorch
 environment:
   resources:
     gpu:
-      requests: 1
-      limits: 1
+      requests: 4
+      limits: 4
   node_selector:
-    polyaxon: exp-gpu
-  replicas:
-    n_workers: 2
-    default_worker:
-      resources:
-        cpu:
-          requests: 1
-          limits: 4
-      node_selector:
-        polyaxon: exp-cpu
-
+    polyaxon: p4-medium
 
   persistence:
     data: ['data']
