--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -7,17 +7,14 @@ build:
   dockerfile: Dockerfile
 
 run:
-  cmd: python train_lulc_cd.py \
+  cmd: python train_lulc.py \
    --log_dir=./log/ \
    --data_dir=./onera/ \
    --weight_dir=/outputs/ \
    --batch_size=128 \
    --epochs=20 \
    --patch_size=90 \
-   --stride=50 \
-   --loss=tversky \
-   --alpha=0.1 \
-   --beta=0.9 \
+   --stride=10 \
    --lr=0.1
 
 framework: pytorch
