--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -7,15 +7,18 @@ build:
   dockerfile: Dockerfile
 
 run:
-  cmd: python train_lulc.py \
+  cmd: python train_lulc_cd.py \
    --log_dir=./log/ \
    --data_dir=./onera/ \
    --weight_dir=/outputs/ \
-   --batch_size=256 \
+   --batch_size=128 \
    --epochs=20 \
    --patch_size=90 \
-   --stride=10 \
-   --lr=0.01
+   --stride=50 \
+   --loss=tversky \
+   --alpha=0.1 \
+   --beta=0.9 \
+   --lr=0.1
 
 framework: pytorch
 environment:
