--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -1,25 +1,50 @@
 ---
 version: 1
 
-kind: experiment
+kind: group
 
 build:
   dockerfile: Dockerfile
 
+
+hptuning:
+  random_search:
+    n_experiments: 10
+  concurrency: 3
+  seed: 3234
+  matrix:
+    lr:
+      logspace: 0.01:0.1:5
+    alpha:
+      logspace: 0.1:0.9:5
+    beta:
+      logspace: 0.1:0.9:5
+
+declarations:
+  dataset: onera_w_mask.tar.gz
+  log_dir: ./log/
+  data_dir: ./onera/
+  weight_dir: /outputs/
+  batch_size: 128
+  loss: tversky
+  stride: 50
+  patch_size: 90
+  epochs: 10
+
+
 run:
-  cmd: python train.py \
-   --dataset=onera_w_mask.tar.gz
-   --log_dir=./log/ \
-   --data_dir=./onera/ \
-   --weight_dir=/outputs/ \
-   --batch_size=128 \
-   --epochs=10 \
-   --patch_size=90 \
-   --stride=50 \
-   --loss=tversky \
-   --alpha=0.1 \
-   --beta=0.9 \
-   --lr=0.1
+  cmd: python train.py --dataset={{ dataset }} \
+                       --log_dir={{ log_dir }} \
+                       --data_dir={{ data_dir }} \
+                       --weight_dir={{ weight_dir }} \
+                       --batch_size={{ batch_size }} \
+                       --epochs={{ epochs }} \
+                       --patch_size={{ patch_size }} \
+                       --stride={{ stride }} \
+                       --loss={{ loss }} \
+                       --alpha={{ alpha }} \
+                       --beta={{ beta }} \
+                       --lr={{ lr }}
 
 framework: pytorch
 environment:
