removed all lulc code

--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -1,7 +1,7 @@
 ---
 version: 1
 
-kind: group
+kind: experiment
 
 build:
   dockerfile: Dockerfile
@@ -20,31 +20,31 @@ build:
 #     beta:
 #       uniform: 0.7
 
-hptuning:
-  concurrency: 4
-  seed: 3234
-  bo:
-    n_iterations: 16
-    n_initial_trials: 8
-    metric:
-      name: validate_cd_f1scores
-      optimization: maximize
-    utility_function:
-      acquisition_function: ucb
-      kappa: 1.2
-      gaussian_process:
-        kernel: matern
-        length_scale: 1.0
-        nu: 1.9
-        n_restarts_optimizer: 0
-
-  matrix:
-    lr:
-      uniform: [0.001, 0.01]
-    alpha:
-      uniform: [0, 0.3]
-    beta:
-      uniform: [0.7, 1]
+# hptuning:
+#   concurrency: 4
+#   seed: 3234
+#   bo:
+#     n_iterations: 16
+#     n_initial_trials: 8
+#     metric:
+#       name: validate_cd_f1scores
+#       optimization: maximize
+#     utility_function:
+#       acquisition_function: ucb
+#       kappa: 1.2
+#       gaussian_process:
+#         kernel: matern
+#         length_scale: 1.0
+#         nu: 1.9
+#         n_restarts_optimizer: 0
+#
+#   matrix:
+#     lr:
+#       uniform: [0.001, 0.01]
+#     alpha:
+#       uniform: [0, 0.3]
+#     beta:
+#       uniform: [0.7, 1]
 
 
 
@@ -57,10 +57,10 @@ declarations:
   loss: tversky
   stride: 50
   patch_size: 90
-  epochs: 50
-  # lr: 0.01
-  # alpha: 0.1
-  # beta: 0.9
+  epochs: 1
+  lr: 0.01
+  alpha: 0.1
+  beta: 0.9
 
 
 
