--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -53,14 +53,15 @@ declarations:
   log_dir: ./log/
   data_dir: ./onera/
   weight_dir: /outputs/
-  batch_size: 128
+  batch_size: 512
   loss: tversky
-  stride: 50
-  patch_size: 90
-  epochs: 1
-  lr: 0.01
+  stride: 10
+  patch_size: 32
+  epochs: 20
+  lr: 0.001
   alpha: 0.1
   beta: 0.9
+  val_cities: 12\,13\,0\,1
 
 
 
@@ -77,7 +78,8 @@ run:
                        --loss={{ loss }} \
                        --alpha={{ alpha }} \
                        --beta={{ beta }} \
-                       --lr={{ lr }}
+                       --lr={{ lr }} \
+                       --val_cities={{ val_cities }}
 
 framework: pytorch
 environment:
@@ -86,7 +88,7 @@ environment:
       requests: 4
       limits: 4
   node_selector:
-    polyaxon: p4-medium
+    polyaxon: v100-deathstar
 
   persistence:
     data: ['data']
