--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -6,47 +6,6 @@ kind: experiment
 build:
   dockerfile: Dockerfile
 
-#
-# hptuning:
-#   random_search:
-#     n_experiments: 1
-#   concurrency: 3
-#   seed: 3234
-#   matrix:
-#     lr:
-#       uniform: 0.002
-#     alpha:
-#       uniform: 0.3
-#     beta:
-#       uniform: 0.7
-
-# hptuning:
-#   concurrency: 4
-#   seed: 3234
-#   bo:
-#     n_iterations: 16
-#     n_initial_trials: 8
-#     metric:
-#       name: validate_cd_f1scores
-#       optimization: maximize
-#     utility_function:
-#       acquisition_function: ucb
-#       kappa: 1.2
-#       gaussian_process:
-#         kernel: matern
-#         length_scale: 1.0
-#         nu: 1.9
-#         n_restarts_optimizer: 0
-#
-#   matrix:
-#     lr:
-#       uniform: [0.001, 0.01]
-#     alpha:
-#       uniform: [0, 0.3]
-#     beta:
-#       uniform: [0.7, 1]
-
-
 
 declarations:
   dataset: onera_w_mask.tar.gz
@@ -57,11 +16,11 @@ declarations:
   loss: tversky
   stride: 50
   patch_size: 90
-  epochs: 1
+  epochs: 3
   lr: 0.01
   alpha: 0.9
   beta: 0.1
-
+  validation_city: cupertino
 
 
 
@@ -78,6 +37,7 @@ run:
                        --alpha={{ alpha }} \
                        --beta={{ beta }} \
                        --lr={{ lr }}
+                       --validation_city={{ validation_city }}
 
 framework: pytorch
 environment:
