--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -12,12 +12,12 @@ declarations:
   log_dir: ./log/
   data_dir: ./onera/
   weight_dir: /outputs/
-  batch_size: 512
+  batch_size: 128
   loss: tversky
   validation_city: cupertino
   stride: 10
   patch_size: 32
-  epochs: 20
+  epochs: 1
   lr: 0.001
   alpha: 0.1
   beta: 0.9
@@ -49,7 +49,7 @@ environment:
       requests: 4
       limits: 4
   node_selector:
-    polyaxon: v100-deathstar
+    polyaxon: p4-medium
 
   persistence:
     data: ['data']
