--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -12,16 +12,17 @@ declarations:
   log_dir: ./log/
   data_dir: ./onera/
   weight_dir: /outputs/
-  batch_size: 128
+  batch_size: 512
   loss: tversky
   validation_city: cupertino
   stride: 10
   patch_size: 32
-  epochs: 1
+  epochs: 30
   lr: 0.001
   alpha: 0.1
   beta: 0.9
   val_cities: 12\,13\,0\,1
+  project_name: 'CD_ready'
 
 
 
@@ -41,6 +42,7 @@ run:
                        --lr={{ lr }} \
                        --val_cities={{ val_cities }}
                        --validation_city={{ validation_city }}
+                       --project_name={{ project_name }}
 
 framework: pytorch
 environment:
