--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -14,7 +14,7 @@ declarations:
   weight_dir: /outputs/
   batch_size: 512
   loss: tversky
-  validation_city: cupertino
+  validation_cities: cupertino rennes
   stride: 10
   patch_size: 32
   epochs: 30
@@ -41,7 +41,7 @@ run:
                        --beta={{ beta }} \
                        --lr={{ lr }} \
                        --val_cities={{ val_cities }}
-                       --validation_city={{ validation_city }}
+                       --validation_cities={{ validation_cities }}
                        --project_name={{ project_name }}
 
 framework: pytorch
