--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -14,7 +14,7 @@ declarations:
   weight_dir: /outputs/
   batch_size: 512
   loss: tversky
-  validation_cities: cupertino rennes
+  validation_cities: cupertino,rennes
   stride: 10
   patch_size: 32
   epochs: 30
