--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -14,10 +14,10 @@ framework: pytorch
 environment:
   resources:
     gpu:
-      requests: 0
-      limits: 0
+      requests: 1
+      limits: 1
   node_selector:
-    polyaxon: cpu-test-pool
+    polyaxon: gpu-test-pool
 
   persistence:
     data: ['data']
