--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -16,7 +16,7 @@ environment:
       requests: 1
       limits: 1
   node_selector:
-    polyaxon: gpu-test-pool
+    polyaxon: p4-train-pool
 
   persistence:
     data: ['data']
