--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -8,8 +8,8 @@ run:
   kind: job
   init:
     - git:
-        url: 'https://github.com/granularai/fabric'
-        revision: develop
+        url: "https://github.com/granularai/fabric"
+        revision: feature/test_branch
   connections: [dataset]
   container:
     image: gcr.io/granular-ai/basecamp:latest
@@ -17,5 +17,4 @@ run:
       - python
       - train.py
     name: fabric
-    workingDir: '{{ globals.artifacts_path }}/fabric'
-
+    workingDir: "{{ globals.artifacts_path }}/fabric"
