--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -10,7 +10,7 @@ run:
     - git:
         url: "https://github.com/granularai/fabric"
         revision: feature/test_branch
-  connections: [dataset]
+  connections: [datasets]
   container:
     image: gcr.io/granular-ai/basecamp:latest
     command:
