RUN@ where is polyaxon 2

--- a/.github/workflows/polyaxon-run.yml
+++ b/.github/workflows/polyaxon-run.yml
@@ -41,8 +41,8 @@ jobs:
 
     - name: tmp-find-polyaxon
       run: |-
-        ls /bin/
-        ls ./
+        locate polyaxon
+        ls ../
 
     # Get the GKE credentials so we can deploy to the cluster
     - name: Cluster-authentication
