--- a/.github/workflows/polyaxon-run.yml
+++ b/.github/workflows/polyaxon-run.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: tmp-find-polyaxon
       run: |-
-        locate polyaxon
+        whereis polyaxon
 
     # Get the GKE credentials so we can deploy to the cluster
     - name: Cluster-authentication
