RUN@ where is polyaxon 8

--- a/.github/workflows/polyaxon-run.yml
+++ b/.github/workflows/polyaxon-run.yml
@@ -38,6 +38,7 @@ jobs:
       run: |-
         pip3 install setuptools wheel
         pip3 install -U polyaxon
+        polyaxon --help
 
     - name: tmp
       run: |-
