--- a/.github/workflows/polyaxon-run.yml
+++ b/.github/workflows/polyaxon-run.yml
@@ -56,6 +56,6 @@ jobs:
         polyaxon project create --name "$REPO_NAME" || true
 
     - name: run
-      if: ${{ steps.create-project.outputs.status == 'failure' || steps.create-project.outputs.status == 'success'  }}
+      # if: ${{ steps.create-project.outputs.status == 'failure' || steps.create-project.outputs.status == 'success'  }}
       run: |
         polyaxon run -p "$REPO_NAME" -f polyaxonfile.yml --description "${{ github.event.head_commit.message }}"
