--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -12,7 +12,7 @@ run:
   init:
     - git:
         url: 'https://github.com/granularai/fabric'
-        revision: develop
+        revision: feature/log_code
   connections: [datasets, artifacts-store]
   container:
     image: gcr.io/granular-ai/basecamp:latest
@@ -24,4 +24,3 @@ run:
     resources:
       limits:
         nvidia.com/gpu: "1"
-
