--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ matplotlib==3.2.1
 MedPy==0.4.0
 numpy==1.18.1
 Pillow==7.1.1
-polyaxon=1.1.7
+polyaxon=1.1.7post4
 rasterio==1.1.3
 scikit-image==0.16.2
 scipy==1.4.1
