--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -12,7 +12,7 @@ run:
   init:
     - git:
         url: 'https://github.com/granularai/fabric'
-        revision: develop
+        revision: feature/log_model_xp
   connections: [datasets, artifacts-store]
   container:
     image: gcr.io/granular-ai/basecamp:tmp
