RUN@Using new basecamp model loader, fixed yq import

--- a/.github/workflows/polyaxon-run.yml
+++ b/.github/workflows/polyaxon-run.yml
@@ -45,7 +45,7 @@ jobs:
         gcloud container clusters get-credentials "$GKE_CLUSTER" --zone "$GKE_ZONE"
 
     - name: Update Polyaxonfile Revision
-      uses: pascal-sochacki/yq@github-action
+      uses: mikefarah/yq@3.3.2
       with:
         cmd: yq write --inplace polyaxonfile.yml 'run.init[0].git.revision' ${{ github.ref }}
 
