--- a/.github/workflows/polyaxon-run.yml
+++ b/.github/workflows/polyaxon-run.yml
@@ -46,7 +46,9 @@ jobs:
 
     - name: install tooling
       run: |
-        brew install yq
+            sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/3.3.0/yq_linux_amd64
+            sudo chmod +x /usr/local/bin/yq
+
     - name: Update Polyaxonfile Revision
       run: |
 
