--- a/.github/workflows/polyaxon-run.yml
+++ b/.github/workflows/polyaxon-run.yml
@@ -65,5 +65,5 @@ jobs:
     - name: Update polyaxon revision and run
       # if: ${{ steps.create-project.outputs.status == 'failure' || steps.create-project.outputs.status == 'success'  }}
       run: |
-        yq write --inplace polyaxonfile.yml 'run.init[0].git.revision' ${{ github.ref }}
+        yq write --inplace polyaxonfile.yml 'run.init[0].git.revision' ${{ github.sha }}
         polyaxon run -p "$REPO_NAME" -f polyaxonfile.yml --description "${{ github.event.head_commit.message }}"
