--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -12,12 +12,6 @@ run:
   connections: [datasets, artifacts-store]
   container:
     image: gcr.io/granular-ai/training-base:nightly
-    command:
-      - pip
-      - install -r
-      - requirements.txt
-      - &&
-      - python
-      - train.py
+    command: ['/bin/bash', 'run.sh']
     name: fabric
     workingDir: '{{ globals.artifacts_path }}/fabric'
