--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ matplotlib==3.2.1
 numpy==1.18.1
 polyaxon==1.1.7post4
 rasterio==1.1.3
-torch==^1.6.0
+torch==1.6.0
 torchvision==0.7.0
 basecamper==0.1.1.dev2
