--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -12,6 +12,6 @@ run:
   connections: [datasets, artifacts-store]
   container:
     image: gcr.io/granular-ai/training-base:nightly
-    command: ['/bin/bash', 'run.sh']
+    command: ['sh', 'run.sh']
     name: fabric
     workingDir: '{{ globals.artifacts_path }}/fabric'
