--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib==3.2.1
 numpy==1.18.1
 Pillow==7.1.1
-polyaxon==1.1.7post4
+polyaxon==1.1.8
 rasterio==1.1.3
 torch==1.6.0
 torchvision==0.7.0
