--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -5,6 +5,9 @@ name: fabric
 
 run:
   kind: job
+  environment:
+    nodeSelector:
+      polyaxon: p4-pool
   init:
     - git:
         url: 'https://github.com/granularai/fabric'
@@ -15,3 +18,6 @@ run:
     command: ['/bin/bash', 'run.sh']
     name: fabric
     workingDir: '{{ globals.artifacts_path }}/fabric'
+    resources:
+      limits:
+        nvidia.com/gpu: "1"
