--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -11,7 +11,7 @@ run:
   connections: [datasets, artifacts-store]
   container:
     image: gcr.io/granular-ai/training-base:nightly
-    workingDir: "{{ globals.run_artifacts_path }}/uploads"
+    workingDir: "{{ globals.run_artifacts_path }}/code"
     command: ['/bin/bash', 'run.sh']
     resources:
       requests:
