--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -7,7 +7,7 @@ run:
   kind: job
   environment:
     nodeSelector:
-      polyaxon: v100-pool
+      polyaxon: p4-pool
   connections: [datasets, artifacts-store]
   container:
     image: gcr.io/granular-ai/training-base:nightly
@@ -15,6 +15,6 @@ run:
     command: ['/bin/bash', 'run.sh']
     resources:
       requests:
-        nvidia.com/gpu: 8
+        nvidia.com/gpu: 4
       limits:
-        nvidia.com/gpu: 8
+        nvidia.com/gpu: 4
