--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -8,16 +8,13 @@ run:
   environment:
     nodeSelector:
       polyaxon: p4-pool
-  init:
-    - git:
-        url: 'https://github.com/granularai/fabric'
-        revision: develop
   connections: [datasets, artifacts-store]
   container:
     image: gcr.io/granular-ai/training-base:nightly
+    workingDir: "{{ globals.run_artifacts_path }}/code"
     command: ['/bin/bash', 'run.sh']
-    name: fabric
-    workingDir: '{{ globals.artifacts_path }}/fabric'
     resources:
+      requests:
+        nvidia.com/gpu: 4
       limits:
-        nvidia.com/gpu: "1"
+        nvidia.com/gpu: 4
