--- a/polyaxonfile.yml
+++ b/polyaxonfile.yml
@@ -4,17 +4,34 @@ kind: component
 name: fabric
 
 run:
-  kind: job
-  environment:
-    nodeSelector:
-      polyaxon: p4-pool
-  connections: [datasets, artifacts-store]
-  container:
-    image: gcr.io/granular-ai/phobos:latest
-    workingDir: "{{ globals.run_artifacts_path }}/code"
-    command: ['/bin/bash', 'run.sh']
-    resources:
-      requests:
-        nvidia.com/gpu: 4
-      limits:
-        nvidia.com/gpu: 4
+  kind: pytorchjob
+  master:
+    replicas: 1
+    environment:
+      nodeSelector:
+        polyaxon: p4-pool
+    connections: [datasets, artifacts-store]
+    container:
+      image: gcr.io/granular-ai/phobos:latest
+      workingDir: "{{ globals.run_artifacts_path }}/code"
+      command: ['/bin/bash', 'run.sh']
+      resources:
+        requests:
+          nvidia.com/gpu: 1
+        limits:
+          nvidia.com/gpu: 1
+  worker:
+    replicas: 1
+    environment:
+      nodeSelector:
+        polyaxon: p4-pool
+    connections: [datasets, artifacts-store]
+    container:
+      image: gcr.io/granular-ai/phobos:latest
+      workingDir: "{{ globals.run_artifacts_path }}/code"
+      command: ['/bin/bash', 'run.sh']
+      resources:
+        requests:
+          nvidia.com/gpu: 1
+        limits:
+          nvidia.com/gpu: 1
